# brazilian-legislation-scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  check_acre.py  check_amapa.py  check_amapa_failed_doc.py  check_amapa_missing_links.py  main.py  pyproject.toml  pytest.ini  test_bahia.py
.gemini/: GEMINI.md  settings.json
.github/: copilot-instructions.md
reports/refactor/: refactor_multi_file_31-03-2026_230831.md
src/: config.py
src/database/: saver.py
src/datasets/: build_dataset.py  change_folder_structure.py
src/utils/: __init__.py  concurrency.py  image_inliner.py  openvpn.py
tests/: base_tests.py  conftest.py  test_acre_scraper.py  test_alagoas_scraper.py  test_amapa_scraper.py  test_amazonas_scraper.py  test_bahia_scraper.py  test_camara_dep_scraper.py  test_ceara_scraper.py  test_conama_scraper.py  test_core.py  test_distrito_federal_scraper.py  test_espirito_santo_scraper.py  test_goias_scraper.py  test_icmbio_scraper.py  test_llm.py  test_main.py  test_maranhao_scraper.py  test_mato_grosso_do_sul_scraper.py  test_mato_grosso_scraper.py  test_minas_gerais_scraper.py  test_para_scraper.py  test_paraiba_scraper.py  test_parana_scraper.py  test_pdf_pipeline.py  test_pernambuco_scraper.py  test_rio_de_janeiro_scraper.py  test_rio_grande_do_norte_scraper.py  test_rio_grande_do_sul_scraper.py  test_rondonia_scraper.py  test_santa_catarina_scraper.py  test_sao_paulo_scraper.py  test_saver.py  test_sergipe_scraper.py  test_snowflake_client.py  test_tocantins_scraper.py
tests/services/: test_browser_service.py  (+4 more)
(+151 files in other folders)
