[project]
name = "legislation-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "markitdown[all]>=0.1.2",
    "openai>=1.98.0",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "selenium>=4.35.0",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.0",
]
